tree-sitter-logos/grammar.js
    _block_item: ($, original) =>
      choice(
        original,
        $.logos_inline_directive,
        $.logos_hook_block,
        $.logos_group_block,
        $.logos_subclass_block,
        $.logos_property_directive_line,
        $.logos_top_level_directive_line,
        $.logos_ctor_definition,
        $.logos_dtor_definition,
        $.logos_end_directive,
        $.class_declaration,
        $.class_interface,
        $.class_implementation,
        $.protocol_declaration,
        $.protocol_forward_declaration,
        $.module_import,
        $.compatibility_alias_declaration,
        $.preproc_undef,
        $.preproc_linemarker,
      ),

    declaration: ($) =>
      seq(
        $._declaration_specifiers,
        commaSep1(
          prec.right(
            field(
              "declarator",
              choice(
                seq($._declarator, optional($.gnu_asm_expression)),
                $.init_declarator,
                seq($.type_qualifier, $.identifier),
              ),
            ),
          ),
        ),
        optional($._declaration_modifiers),
        ";",
      ),

    _declaration_modifiers: ($, original) =>
      choice(
        original,
        $.availability_attribute_specifier,
        $.attribute_declaration,
      ),

    _declaration_specifiers: ($) =>
      prec.right(
        seq(
          repeat($._declaration_modifiers),
          field("type", $.type_specifier),
          repeat($._declaration_modifiers),
        ),
      ),

    logos_hook_block: ($) =>
      seq(
        field("directive", $.logos_hook_directive_line),
        repeat($.logos_hook_member),
        field("end", $.logos_end_directive),
      ),

    logos_group_block: ($) =>
      seq(
        field("directive", $.logos_group_directive_line),
        repeat($.logos_group_member),
        field("end", $.logos_end_directive),
      ),

    logos_subclass_block: ($) =>
      seq(
        field("directive", $.logos_subclass_directive_line),
        repeat($.logos_subclass_member),
        field("end", $.logos_end_directive),
      ),

    logos_hook_member: ($) =>
      choice(
        $.implementation_definition,
        $.logos_property_directive_line,
        $.logos_inline_directive,
        $.logos_ctor_definition,
        $.logos_dtor_definition,
        $.preproc_function_def,
        $.preproc_ifdef,
        $.preproc_undef,
        $.preproc_def,
        $.preproc_call,
        alias($.preproc_if_in_implementation_definition, $.preproc_if),
      ),

    logos_group_member: ($) =>
      choice(
        $.logos_hook_block,
        $.logos_subclass_block,
        $.logos_ctor_definition,
        $.logos_dtor_definition,
        $.logos_top_level_directive_line,
        $.preproc_ifdef,
        $.preproc_undef,
        $.preproc_def,
        $.preproc_call,
        alias($.preproc_if_in_implementation_definition, $.preproc_if),
      ),

    logos_subclass_member: ($) =>
      choice(
        $.implementation_definition,
        $.property_declaration,
        $.logos_property_directive_line,
        $.logos_inline_directive,
        $.preproc_function_def,
        $.preproc_ifdef,
        $.preproc_undef,
        $.preproc_def,
        $.preproc_call,
        alias($.preproc_if_in_implementation_definition, $.preproc_if),
      ),

    logos_hook_directive_line: (_) => token(seq("%hook", /[ \t]+[^\n]*/)),
    logos_group_directive_line: (_) => token(seq("%group", /[ \t]+[^\n]*/)),
    logos_subclass_directive_line: (_) =>
      token(seq("%subclass", /[ \t]+[^\n]*/)),

    logos_property_directive_line: (_) =>
      choice(logosLineDirective("%property"), logosLineDirective("%new")),

    logos_top_level_directive_line: (_) =>
      choice(logosLineDirective("%config"), logosLineDirective("%hookf")),

    logos_ctor_definition: ($) =>
      seq(
        field("directive", $.logos_ctor_directive),
        field("body", $.compound_statement),
      ),

    logos_ctor_directive: (_) => "%ctor",
    logos_end_directive: (_) => "%end",

    logos_inline_directive: (_) =>
      choice(
        token(seq("%init", /[^;\n]*/)),
        token(seq("%c", choice("(", " "), /[^;\n]*/)),
        token(seq("%orig", /[^;\n]*/)),
        token(seq("%log", /[^;\n]*/)),
      ),

    compound_statement: ($) =>
      seq(optional("@autoreleasepool"), "{", repeat($._block_item), "}"),

    _declarator: ($, original) =>
      prec.right(
        choice(
          ...original.members.filter(
            (member) => member.name !== "attributed_declarator",
          ),
          $.block_pointer_declarator,
        ),
      ),

    _abstract_declarator: ($, original) =>
      choice(original, $.abstract_block_pointer_declarator),

    implementation_definition: ($) =>
      prec(
        1,
        choice(
          $.function_definition,
          $.declaration,
          $.property_implementation,
          seq($.struct_specifier, ";"),
          $.method_definition,
          $.preproc_function_def,
          $.macro_type_specifier,
          $.type_definition,
          alias($.preproc_if_in_implementation_definition, $.preproc_if),
          $.preproc_ifdef,
          $.preproc_undef,
          $.preproc_def,
          $.preproc_call,
        ),
      ),

    method_definition: ($) =>
      seq(
        choice("+", "-"), // class = '+', instance = '-'
        optional($.method_type),
        optional($.attribute_specifier),
        choice(
          seq(
            $.method_selector_no_list,
            optional(
              seq(
                $.method_parameter,
                repeat(seq(optional($.method_selector), $.method_parameter)),
              ),
            ),
          ),
          seq(
            $.method_parameter,
            repeat(seq(optional($.method_selector), $.method_parameter)),
          ),
        ),
        optional(
          seq(
            ",",
            choice(
              "...",
              commaSep1(alias($.c_method_parameter, $.method_parameter)),
            ),
          ),
        ),
        repeat($.declaration),
        repeat($._declaration_modifiers),
        optional(";"),
        $.compound_statement,
        optional(";"),
      ),

    method_type: ($) =>
      seq(
        "(",
        commaSep1(
          seq(
            optional($.attribute_specifier),
            choice($.type_name, $.parameterized_arguments),
          ),
        ),
        ")",
      ),

    method_parameter: ($) =>
      prec.right(
        seq(
          ":",
          optional($.method_type),
          optional($._declaration_modifiers),
          choice($.identifier, $.keyword_identifier),
          repeat($._declaration_modifiers),
        ),
      ),

    abstract_pointer_declarator: ($) =>
      prec.dynamic(
        1,
        prec.right(
          seq(
            "*",
            repeat($._declaration_modifiers),
            field("declarator", optional($._abstract_declarator)),
          ),
        ),
      ),
    init_declarator: ($) =>
      seq(
        field("declarator", $._declarator),
        optional($.attribute_specifier),
        "=",
        field("value", choice($.initializer_list, $.expression)),
      ),

    typedefed_specifier: ($) =>
      prec.right(
        seq($.typedefed_identifier, optional($.protocol_reference_list)),
      ),

    type_name: ($) =>
      prec.right(
        seq(
          repeat1(
            prec.right(
              choice(
                $.specifier_qualifier,
                $.attribute_specifier,
                $._declarator,
              ),
            ),
          ),
          optional($.protocol_reference_list),
          optional($._abstract_declarator),
        ),
      ),

    identifier: (_) =>
      /(\$|\p{XID_Start}|_|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})(\$|\p{XID_Continue}|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})*/u,
